# FLAPPY_NEAT

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.claude/: settings.local.json
.claude/skills/flappyneat-build/: SKILL.md
.claude/skills/flappyneat-explain/: SKILL.md
assets/Shaders/: Quad.vert
cmake/: deps.cmake
headers/: Bird.h  Game.h  Genome.h  Pipe.h  Renderer.h  Shaders.h  Window.h  config.h
src/: Bird.cpp  Game.cpp  Genome.cpp  Pipe.cpp  Renderer.cpp  Shaders.cpp  main.cpp  window.cpp
